<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EventPageDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_img_layout"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/event_details_img"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/balelec"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="87dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/event_details_img"
                    android:src="@drawable/ic_edit_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/event_details_img"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="PrivateResource"
                    android:background="@color/white_transparent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="5dp"
                    android:visibility="gone"
                    android:id="@+id/event_details_edit_img"
                    android:onClick="onEditImageClicked"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/event_details_title"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_img_layout"
                android:layout_marginTop="6dp"
                android:text="@string/title"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/event_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_details_title"
                android:layout_marginTop="6dp"
                android:text="@string/description"
                android:textColor="#A9A9A9"
                android:textSize="18sp"
                android:textStyle="bold"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"/>

            <EditText
                android:id="@+id/event_details_url_edit"
                android:layout_below="@id/event_details_description"
                android:layout_width="180dp"
                android:layout_height="44dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="6dp"
                android:textColor="#A9A9A9"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"/>


            <EditText
                android:id="@+id/event_details_start"

                android:layout_below="@id/event_details_description"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/date_format"
                android:inputType="date"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"/>

            <EditText
                android:id="@+id/event_details_end"
                android:layout_below="@id/event_details_description"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/date_format"
                android:inputType="date"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_details_start"
                android:id="@+id/event_details_map_layout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_details_map_text"
                    android:text="upload the .kml file"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/event_details_map_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@id/event_details_map_text"
                    android:layout_alignEnd="@+id/event_details_map_text"
                    android:text="map upload"
                    android:onClick="onUploadMapClick"
                    android:visibility="gone"/>
            </RelativeLayout>

            <Spinner
                android:id="@+id/event_type_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/event_type_list"
                android:prompt="@string/event_type_hint"
                android:layout_below="@id/event_details_map_layout" />

            <Switch
                android:id="@+id/event_public_edit"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_details_map_layout"
                android:layout_marginLeft="135dp"
                android:hint="isPublic"
                android:visibility="visible"
                android:clickable="false"/>


            <Switch
                android:id="@+id/event_sos_edit"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_details_map_layout"
                android:layout_marginLeft="245dp"
                android:hint="Emergencies"
                android:visibility="visible"
                android:clickable="false"/>
        
            <TextView
                android:id="@+id/EditEventOrganizers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_public_edit"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:padding="10dp"
                android:text="@string/organizers"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:text="Schedule"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:paddingRight="10dp"/>

        <ScrollView
            android:id="@+id/organizers_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditEventOrganizers">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organizers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <Button
            android:id="@+id/invite_organizer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/organizers_scroll"
            android:layout_marginTop="10dp"
            android:text="@string/invite_organizer"

            android:onClick="organizerInviteLinkClicked"
            android:visibility="gone"/>
        <Button
            android:id="@+id/revoke_organizer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/invite_organizer_button"
            android:onClick="revokeClicked"
            android:padding="10dp"
            android:text="@string/revoke_organizer"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/EditEventSecurity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/security"
            android:padding="10dp"
            android:ems="10"
            android:layout_below="@id/invite_organizer_button"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditEventSecurity"
            android:id="@+id/security_scroll">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/security_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </ScrollView>
        <Button
            android:id="@+id/invite_security_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/security_scroll"
            android:layout_marginTop="10dp"
            android:text="@string/invite_security"
            android:onClick="securityInviteLinkClicked"
            android:visibility="gone"/>
        <Button
            android:id="@+id/event_details_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/revoke_organizer_button"
            android:onClick="onSubmitChangesClicked"
            android:padding="10dp"
            android:text="Submit Changes"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invite_organizer_button"/>

        <Button
            android:id="@+id/event_details_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_details_submit"
            android:onClick="onCancelClicked"
            android:padding="10dp"
            android:text="Cancel"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_details_submit"/>
    </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit_white"
        tools:ignore="PrivateResource"
        app:fabSize="normal"
        app:backgroundTint="@color/color2"
        android:id="@+id/event_details_fab"
        android:visibility="gone"
        android:onClick="onEditClicked"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

