...
    <string name="forgot_password">forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="reset_link_sent">A reset link has been sent</string>
    <string name="reset_failure">The link could not be sent. Please try again later.</string>
    <string name="reset_email_not_found">Email not associated to any user. Please sign up.</string>
    <string name="invite_link_dialog_title">Here is the invite link:</string>
    <string name="invite_organizer">Invite Organizer</string>
    <string name="revoke_organizer">Revoke Organizer</string>
    <string name="organizers">Organizers</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="organizer_invite_text">Log in to view the invite</string>
...
